# ani-tracker

./: .gitignore  Cargo.toml  database.erd.json
.cargo/: template.config.toml
assets/: response_template.html
migrations/: 20241113183138_Create_Database.sql
src/: db.rs  dir.rs  main.rs  mal.rs  video.rs
