[package]
name = "ani-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
mal-api = { version = "2.0.2", features = ["full"] }
open = "5.3.0"
rusqlite = "0.32.1"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
tokio = { version = "1.41.1", features = ["full"] }
url = "2.5.3"
