[package]
name = "ani-tracker"
version = "0.1.0"
edition = "2021"
description = "Browse local anime, watch with MPV/VLC, and auto-update watched episodes on MyAnimeList."
authors = [
    "Kacper Tucholski <kacper.tucholski.kt@gmail.com>"
]

[dependencies]
mal-api = { version = "2.0.2", features = ["full"] }
open = "5.3.0"
rusqlite = "0.32.1"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-rustls", "sqlite", "macros"] }
tokio = { version = "1.41.1", features = ["full"] }
ffmpeg = {version = "7.1.0", package = "ffmpeg-next"}
rayon = "1.10.0"
anitomy = "0.2.0"
mpris = "2.0.1"
async-walkdir = "2.0.0"
notify-rust = "4.11.3"
walkdir = "2.5.0"
indicatif = { version = "0.17.9", features = ["futures", "rayon", "tokio"] }
directories = "5.0.1"
clap = { version = "4.5.21", features = ["derive", "string"] }
